@@ -1,9 +1,15 @@
 # /etc/conf.d/rc: Global config file for the Gentoo RC System
 
 # Set to "yes" if you want the rc system to try and start services
-# in parallel for a slight speed improvement. NOTE: When enabled
-# init script output is buffered and displayed in one go when finished.
+# in parallel for a slight speed improvement.
 RC_PARALLEL="no"
+
+# If we're running in parallel then the output of each service is buffered
+# until the service finishes. This is so the output one service is not mixed
+# with the output of another service.
+# To avoid buffering can prefix each line of output to see the service which
+# it belongs to by setting the RC_PREFIX="yes".
+RC_PREFIX="no"
 
 # Set RC_INTERACTIVE to "yes" and you'll be able to press the I key during
 # boot so you can choose to start specific services. Set to "no" to disable
